--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -4,9 +4,9 @@
 %table#movies
   %thead
     %tr
-      %th Movie Title
+      %th {:class => ("hilite" if @orderBy == "title")}= link_to "Movie Title", movies_path(:orderBy => "title"), id: "title_header"
       %th Rating
-      %th Release Date
+      %th {:class => ("hilite" if @orderBy == "release_date")}= link_to "Release Date", movies_path(:orderBy => "release_date"), id: "release_date_header"
       %th More Info
   %tbody
     - @movies.each do |movie|
