--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -4,7 +4,7 @@
 %table#movies
   %thead
     %tr
-      %th{:class=>find_class('title')}= link_to "Movie Title", movies_path(:sort=>'title'), :id=>'title_header
+      %th{:class=>find_class('title')}= link_to "Movie Title", movies_path(:sort=>'title'), :id=>'title_header'
       %th Rating
       %th{:class=>find_class('release_date')}= link_to "Release Date", movies_path(:sort=>'release_date'), :id=>'release_date_header'
       %th More Info
